Bug fix for new font family groups on IE.

--- a/css/_import.css
+++ b/css/_import.css
@@ -164,16 +164,18 @@
 *:not(pre):not(code) {
   -webkit-font-smoothing: antialiased;
 }
-body,
+html,
 input,
 button,
 textarea,
 select {
-  font: 14px/1.42857143 -apple-system, Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 14px;
   font-weight: 400;
+  line-height: 1.42857143;
   letter-spacing: 0;
 }
-body {
+html {
   background-color: hsl(0, 0%, 98%);
   background-color: var(--body-bg);
 }
