--- a/css/reset.less
+++ b/css/reset.less
@@ -8,8 +8,8 @@
     &:not(pre):not(code) { -webkit-font-smoothing: antialiased; }
 }
 
-body,input,button,textarea,select { font: @font-size/@line-height @font-family; font-weight: @font-normal; letter-spacing: @letter-spacing; }
-body { ._bg-var(body-bg); }
+html,input,button,textarea,select { font-family: @font-family; font-size: @font-size; font-weight: @font-normal; line-height: @line-height; letter-spacing: @letter-spacing; }
+html { ._bg-var(body-bg); }
 
 article,aside,details,figcaption,figure,footer,header,main,nav,section,summary,audio,canvas,video { display: block; }
 
